      to recover if you realize you uncommitted the wrong thing.
      (John Arbash Meinel)

    * When reading index files, if we happen to read the whole file in a
      single request treat it as a ``_buffer_all`` request. This happens
      most often on small indexes over remote transports, where we default
      to reading 64kB. It saves a round trip for each small index during
      fetch operations. (John Arbash Meinel)

  BUG FIXES:

    * ``bzr rm`` is now aliased to ``bzr del`` for the convenience of svn
      users. (Robert Collins, #205416)

    * Catch the infamous "select/poll returned error" which occurs when
      pycurl try to send a body request to an HTTP/1.0 server which has
      already refused to handle the request. (Vincent Ladeuil, #225020)

    * ``FTPTransport.stat()`` would return ``0000`` as the permission bits
      for the containing ``.bzr/`` directory (it does not implement
      permissions). This would cause us to set all subdirectories to
      ``0700`` and files to ``0600`` rather than leaving them unmodified.
      Now we ignore ``0000`` as the permissions and assume they are
      invalid. (John Arbash Meinel, #259855)

    * Merging from a previously joined branch will no longer cause 
      a traceback. (Jelmer Vernooij, #203376)
    
    * ``RemoteTransport.readv()`` was being inefficient about how it
      buffered the readv data and processed it. It would keep appending to
      the same string (causing many copies) and then pop bytes out of the
      start of the string (causing more copies).
      With this patch "bzr+ssh://local" speeds improve by up to 3x.
      (John Arbash Meinel)

    * Running ``bzr st PATH_TO_TREE`` will no longer suppress merge
      status. Status is also about 7% faster on mozilla sized trees
      when the path to the root of the tree has been given. Users of
      the internal ``show_tree_status`` function should be aware that