@@ -39,7 +39,12 @@ IN DEVELOPMENT
       single request treat it as a ``_buffer_all`` request. This happens
       most often on small indexes over remote transports, where we default
       to reading 64kB. It saves a round trip for each small index during
-      fetch operations. (John Arbash Meinel)
+      fetch operations. Also, if we have read more than 50% of an index
+      file, trigger a ``_buffer_all`` on the next request. This works
+      around some inefficiencies because reads don't fall neatly on page
+      boundaries, so we would ignore those bytes, but request them again
+      later. This could trigger a total read size of more than the whole
+      file. (John Arbash Meinel)
 
   BUG FIXES:
 
